test/good/functions/var07.px

func div(x: Int, y: Int): Int def
    return x // y

func get(s: String): Int->Int->Int def
    print s
    return div

func f(g: String->(Int->Int->Int), s: String, b: Int): Int def
    h = g(s)
    print h(b, 1)
    return h(b, 4)

print f(get, "xyz", 8)
