test/bad/functions/type01.px

func f(Int x) def
    return

func g(String x) def
    return

h = f
h = g
